# lisca

./: .gitignore  README.md
.github/workflows/: lisca-rs.yml  release-build.yml
core/spec/: cli-contract-v1.md  zarr-layout-v1.md
lisca-desktop/: README.md  index.html  package.json
lisca-desktop/electron/: main.cts  preload.cts
lisca-desktop/electron/lib/: scan-utils.cts
lisca-desktop/scripts/: dev-web.ts
lisca-desktop/src/: App.tsx  index.css  lisca-desktop-env.d.ts
lisca-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
lisca-desktop/src-tauri/src/: main.rs
lisca-desktop/src/components/layout/: AppContainer.tsx  HexBackground.tsx
lisca-desktop/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  slider.tsx  tabs.tsx
lisca-desktop/src/components/work/: AnalyzeTab.tsx  AnnotationDialog.tsx  ViewTab.tsx
lisca-desktop/src/lib/: annotations.ts  api.ts  assay-yaml.ts  bbox.ts  registration-yaml.ts  scan-utils.ts  slices.ts  types.ts
lisca-desktop/src/pages/: AssayActionsPage.tsx  AssaysPage.tsx  InfoPage.tsx  RegisterPage.tsx  SetupPage.tsx  WorkPage.tsx
lisca-desktop/src/register/: persist.ts
lisca-desktop/test/: annotations.test.ts  assay-health.test.ts  assay-yaml.test.ts  bbox.test.ts  scan-utils.test.ts  slices.test.ts
lisca-py/: pyproject.toml
lisca-py/src/lisca_py/: __init__.py  tests_helpers.py
lisca-py/src/lisca_py/app/: convert.py  crop.py  expression.py  killing.py  movie.py  register.py  tissue.py
lisca-py/src/lisca_py/cli/: main.py
lisca-py/src/lisca_py/cli/commands/: convert.py  crop.py  expression.py  killing.py  movie.py  register.py  tissue.py
lisca-py/src/lisca_py/common/: __init__.py  progress.py  slices.py
lisca-py/src/lisca_py/domain/: schema.py  types.py
lisca-py/src/lisca_py/io/: nd2.py  tiff.py  zarr.py
lisca-py/tests/: test_schema.py
lisca-py/tests/app/: test_expression.py  test_register.py
lisca-py/tests/cli/: test_help.py  test_progress.py
lisca-py/tests/common/: test_progress.py
lisca-py/tests/io/: test_slice_parser.py  test_zarr_paths.py
lisca-rs/: Cargo.toml
lisca-rs/src/: app.rs  cli.rs  common.rs  io.rs  lib.rs  main.rs
lisca-rs/src/app/: convert.rs  crop.rs  expression.rs  killing.rs  movie.rs  register.rs  tissue.rs
lisca-rs/src/cli/commands/: convert.rs  crop.rs  expression.rs  killing.rs  movie.rs  register.rs  tissue.rs
lisca-rs/src/common/: progress.rs  slices.rs
lisca-rs/src/domain/: schema.rs  types.rs
lisca-rs/src/io/: nd2.rs  tiff.rs  zarr.rs
lisca-rs/tests/: cli_help.rs
