[package]
name = "lisca-rs"
version = "0.1.0"
edition = "2021"
description = "Lisca Rust CLI (GUI-free binary)"

[features]
default = ["cuda"]
cuda = ["ort/cuda"]

[[bin]]
name = "lisca-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cellpose-rs = { git = "https://github.com/keejkrej/cellpose-rs" }
cellsam-rs = { git = "https://github.com/keejkrej/cellsam-rs" }
nd2-rs = "0.1.3"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "copy-dylibs"] }
tiff = "0.11"
image = "0.25"
zarrs = { version = "0.23", default-features = false, features = ["filesystem", "blosc", "crc32c", "sharding"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
